XWIKI-4116: The lightbox close button is partially hidden by wide content Fixed.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/web/trunk@22262 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-web/standard/src/main/webapp/resources/js/xwiki/lightbox/lightbox.css
+++ b/xwiki-platform-web/standard/src/main/webapp/resources/js/xwiki/lightbox/lightbox.css
@@ -129,7 +129,7 @@
 
 
 #lb .lb-content {
-	padding: 0 18px;
+  padding: 4px 18px;
 }
 
 .lb-content{
@@ -140,7 +140,8 @@
 
 #close-wrap {
 	position: relative;
-	top: 30px;
+	top: 18px;
+	right: 7px;
 	text-align: right;
 	cursor: default;
 }
